# learnopengl

./: .gitignore  CMakeLists.txt  readme.md
inc/: myeglutil.hpp  myglutil.hpp
resources/gladeui/: basic.glade  basic_orig.ui
src/: CMakeLists.txt  glfwApp.hpp  main.cpp  shaderprogram.cpp  shaderprogram.hpp
src/ex1linearregression/: bgd.cpp
src2/: CMakeLists.txt  gtkmmApp.hpp  implement.cpp  main.cpp
tests/: CMakeLists.txt
tests/src/: test_ex3.cpp  test_global_setup_teardown.cpp  test_todo.cpp
